--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Hoc Est Pykzorunus">
+    <meta name="keywords" content="pykzorunus">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PYKZORUNUS</title>
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
@@ -63,14 +65,14 @@
     <h1>PYKZORUNUS</h1>
     <div class="input-container">
         <input type="file" id="upload" accept="image/*">
-        <button onclick="encryptImage()">Encrypt</button>
-        <button onclick="decryptImage()">Decrypt</button>
-        <button onclick="copyKey()">Copy Key</button>
-        <button onclick="pasteKey()">Paste Key</button>
-        <button id="downloadButton" onclick="downloadImage()" style="display:none;">Download Image</button>
+        <button onclick="encryptImage()">CELARE</button>
+        <button onclick="decryptImage()">MINUTUM</button>
+        <button onclick="copyKey()">EXEMPLAR CLAVEM</button>
+        <button onclick="pasteKey()">CRUSTULUM CLAVEM</button>
+        <button id="downloadButton" onclick="downloadImage()" style="display:none;">Captis Imaginem</button>
     </div>
     <br>
-    <label for="keyBox">Key:</label>
+    <label for="keyBox">CLAVEM</label>
     <textarea id="keyBox"></textarea>
     <br>
     <canvas id="canvas"></canvas>
