--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         }
 
         textarea {
-            width: 300px;
-            height: 100px;
+            width: 60%;
+            height: 30%;
             font-family: 'Aldrich', sans-serif;
             margin: 10px 0;
         }
